<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/moveBR"
            android:layout_width="270dp"
            android:layout_height="77dp"
            android:text="@string/move_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/moveBL" />

        <Button
            android:id="@+id/moveBL"
            android:layout_width="270dp"
            android:layout_height="77dp"
            android:text="@string/move_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/moveTL"
            android:layout_width="270dp"
            android:layout_height="77dp"
            android:text="@string/move_1"
            app:layout_constraintBottom_toTopOf="@+id/moveBL"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/moveTR"
            android:layout_width="270dp"
            android:layout_height="77dp"
            android:text="@string/move_2"
            app:layout_constraintBottom_toTopOf="@+id/moveBR"
            app:layout_constraintStart_toEndOf="@+id/moveTL" />

        <Button
            android:id="@+id/fight"
            android:layout_width="91dp"
            android:layout_height="77dp"
            android:text="@string/fight"
            app:layout_constraintBottom_toTopOf="@+id/switch"
            app:layout_constraintEnd_toStartOf="@+id/cheat"
            app:layout_constraintStart_toEndOf="@+id/moveTR" />

        <Button
            android:id="@+id/switch"
            android:layout_width="wrap_content"
            android:layout_height="77dp"
            android:text="@string/pokemon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/run"
            app:layout_constraintStart_toEndOf="@+id/moveBR" />

        <Button
            android:id="@+id/cheat"
            android:layout_width="wrap_content"
            android:layout_height="77dp"
            android:text="@string/cheat"
            app:layout_constraintBottom_toTopOf="@+id/run"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/run"
            android:layout_width="wrap_content"
            android:layout_height="77dp"
            android:text="@string/run"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>